# ai-stock

./: .env.example  .gitignore  NEXT_SESSION_PROMPT.md  README.md  pyproject.toml
.github/workflows/: daily-report.yml
config/: coin_universe.yaml  influencers.yaml  macro_calendar.yaml  settings.yaml  universe.yaml
docs/: AUTOMATION.md  COIN_UNIVERSE_RATIONALE.md  GLOSSARY.md  NEXT_STEPS.md  OVERHEAT_GUIDE.md  SESSION_HANDOFF.md  SETUP.md  SITE_SETUP.md  SOCIAL_TRACKING.md  UNIVERSE_RATIONALE.md  VERCEL_SETUP.md
reports/backtest/: labels.jsonl
reports/daily/: 2026-05-05.md  2026-05-06.md  2026-05-07.md  2026-05-08.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-15.md  2026-05-18.md  2026-05-19.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-25.md  2026-05-26.md  2026-05-27.md  2026-05-28.md  2026-05-29.md  2026-06-01.md  2026-06-02.md  2026-06-03.md  2026-06-04.md  2026-06-05.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  (+43 more)
scripts/: generate_sample_report.py
tests/: conftest.py  test_adhoc.py  test_backtest.py  test_calendar.py  test_chart_analysis.py  test_coin.py  test_coin_prices.py  test_config.py  test_derivatives_multi_tf.py  test_indicators.py  test_json_export.py  test_judge.py  test_report_e2e.py  test_signals.py  test_site.py  test_sizing.py  test_social.py  test_trade_plan.py  test_translator.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+158 files in other folders)
