[project]
name = "ai-stock"
version = "0.1.0"
description = "AI investment analysis system: thematic watchlist with daily buy-signal verdicts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "yfinance>=0.2.50",
    "pykrx>=1.0.45",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "feedparser>=6.0.11",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.1",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "fredapi>=0.5.2",
    "tabulate>=0.9.0",
]

[project.scripts]
ai-stock = "ai_stock.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_stock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
